fix styling to remove unecessary scrollbars on smaller elements

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ main {
   z-index:10;
   max-width:100%;
   max-height:100%;
-  overflow-y:scroll;
+  overflow-y:auto;
 }
 #tooltip.loaded {
   transition-duration:0.3s;
